# python-anagrams

./: .gitignore  README.md  README.rst  pyproject.toml
anagrams/: main.py
tests/: test_anagrams.py
