[tool.poetry]
name = "anagrams"
version = "0.1.0"
description = ""
authors = ["rgdl <robert_delisle44@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.6.2"
pandas = "^1.3.2"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
